--- a/DEV/eureka-server-dev.yml
+++ b/DEV/eureka-server-dev.yml
@@ -1,7 +1,11 @@
 server:
-  port: 2222
+  port: 8761
 
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  server:
+    waitTimeInMsWhenSyncEmpty: 0  
