--- a/DEV/eureka-server-dev.yml
+++ b/DEV/eureka-server-dev.yml
@@ -2,10 +2,18 @@ server:
   port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-  server:
-    waitTimeInMsWhenSyncEmpty: 0  
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+	server:
+      waitTimeInMsWhenSyncEmpty: 0
+	  
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"	  
