--- a/DEV/eureka-server-dev.yml
+++ b/DEV/eureka-server-dev.yml
@@ -6,7 +6,7 @@ eureka:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl: 
-      defaultZone: "http://localhost:${server.port}/eureka/"
+      defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
   instance: 
     hostname: localhost
   server: 
