--- a/DEV/ms.demo-dev.yml
+++ b/DEV/ms.demo-dev.yml
@@ -1,1 +1,21 @@
 
+# Discovery Server Access
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    statusPageUrlPath: /actuator
+    healthCheckUrlPath: /info
+    metadataMap:
+      appOwner: adm
+      description: aplicación ejemplo microservicios
+
+# HTTP Server
+server:
+  port: ${PORT:1111}   # HTTP (Tomcat) port
+
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:7777/user
