--- a/DEV/ms.demo-dev.yml
+++ b/DEV/ms.demo-dev.yml
@@ -7,6 +7,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    healthcheck:
+      enabled: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
   instance:
