--- a/DEV/eureka-server-dev.yml
+++ b/DEV/eureka-server-dev.yml
@@ -5,10 +5,21 @@ eureka:
   client: 
     fetchRegistry: false
     registerWithEureka: false
+    healthcheck:
+      enabled: true
     serviceUrl: 
       defaultZone: "http://${eureka.instance.hostname}:${server.port}/eureka/"
   instance: 
     hostname: localhost
+    statusPageUrlPath: /actuator/health
+    healthCheckUrlPath: /actuator/info
+    nonSecurePortEnabled: false
+    securePortEnabled: true
+    initialStatus: UNKNOWN
+    virtualHostName: otro
+    metadataMap:
+      appOwner: adm
+      description: EUREKA SERVER
   server: 
     waitTimeInMsWhenSyncEmpty: 0
 management: 
