--- a/DEV/ms-demo-dev.yml
+++ b/DEV/ms-demo-dev.yml
@@ -8,7 +8,8 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
   instance:
-    hostname: localhost
+    statusPageUrlPath: /info
+    healthCheckUrlPath: /health
     metadataMap:
       appOwner: adm
       description: aplicación ejemplo microservicios
