--- a/DES/customer-service-dev.yml
+++ b/DES/customer-service-dev.yml
@@ -16,7 +16,7 @@ spring:
     url : jdbc:mysql://localhost:3306/ecommerce-adm?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: admdb
     password : mancilla01
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     database-platform : org.hibernate.dialect.MySQL8Dialect
