--- a/DES/eureka-dev.yml
+++ b/DES/eureka-dev.yml
@@ -1,6 +1,15 @@
 server:
   port: ${app.eureka-port}
 
+application:
+  version : 1.0.0
+  title : "eureka Serrvice"
+######################## BANNER  ########################
+spring:
+  banner:
+    charset : UTF-8
+    location : classpath:banner.txt
+
 eureka:
   instance:
     hostname: ${app.eureka-server}
@@ -15,3 +24,15 @@ eureka:
       response-cache-update-interval-ms: 5000
       enable-self-preservation: true
       renewalPercentThreshold: 0.49
+######################## SALUD  ########################
+management:
+  endpoint:
+    web:
+      exposure:
+        include: "*"
+    health:
+      enabled: true
+      show-details: always
+health:
+  config:
+    time-to-live: 30      
