--- a/DES/customer-service-dev.yml
+++ b/DES/customer-service-dev.yml
@@ -58,7 +58,7 @@ management:
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://localhost:9002/eureka
+            defaultZone: http://localhost:9002
         initialInstanceInfoReplicationIntervalSeconds: 5
         registryFetchIntervalSeconds: 5
     instance:
