--- a/DES/eureka-server.yml
+++ b/DES/eureka-server.yml
@@ -12,7 +12,7 @@ spring:
 
 eureka:
   client: 
-    fetchRegistry: false
+    fetch-registry: false
     register-with-eureka: false
     healthcheck:
       enabled: true
