--- a/DES/eureka-server.yml
+++ b/DES/eureka-server.yml
@@ -12,10 +12,8 @@ spring:
 
 eureka:
   client: 
-    fetch-registry: false
-    register-with-eureka: false
-    healthcheck:
-      enabled: true
+    registerWithEureka: false
+    fetchRegistry: false   
   server: 
     waitTimeInMsWhenSyncEmpty: 0
 ######################## SALUD  ########################
