--- a/DES/eureka-server.yml
+++ b/DES/eureka-server.yml
@@ -13,7 +13,9 @@ spring:
 eureka:
   client: 
     register-with-eureka: false
-    fetch-registry: false   
+    fetch-registry: false
+    serviceUrl:
+      defaultZone: http://localhost:${server.port}/eureka/
   server:
     eviction-interval-timer-in-ms: 1000
     max.time.for.replication: 30000
