--- a/DES/eureka-server.yml
+++ b/DES/eureka-server.yml
@@ -18,6 +18,9 @@ eureka:
       defaultZone: http://localhost:${app.eureka-port}/eureka/
   server:
     eviction-interval-timer-in-ms: 1000
+    response-cache-update-interval-ms: 5000
+    renewalPercentThreshold: 0.49
+    enable-self-preservation: true
     max.time.for.replication: 30000
     waitTimeInMsWhenSyncEmpty: 0
 ######################## SALUD  ########################
