--- a/DES/eureka-server.yml
+++ b/DES/eureka-server.yml
@@ -18,7 +18,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://localhost:${app.eureka-port}/eureka/
+      defaultZone: http://${app.eureka-server}:${app.eureka-port}/eureka/
   server:
     eviction-interval-timer-in-ms: 1000
     response-cache-update-interval-ms: 5000
